@@ -31,9 +31,10 @@ import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import org.jenkins.tools.test.logging.LoggingConfiguration;
 import org.jenkins.tools.test.model.PluginCompatTesterConfig;
 import org.jenkins.tools.test.exception.PomExecutionException;
 import org.jenkins.tools.test.model.TestStatus;
@@ -45,6 +46,14 @@ import org.codehaus.plexus.util.xml.pull.XmlPullParserException;
  * @author Frederic Camblor
  */
 public class PluginCompatTesterCli {
+
+    static {
+        String configFile = System.getProperty("java.util.logging.config.file");
+        String configClass = System.getProperty("java.util.logging.config.class");
+        if (configClass == null && configFile == null) {
+            new LoggingConfiguration();
+        }
+    }
 
     @SuppressFBWarnings(
             value = "NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE",
@@ -117,13 +126,13 @@ public class PluginCompatTesterCli {
         config.setExternalMaven(options.getExternalMaven());
 
         if(options.getIncludePlugins() != null && !options.getIncludePlugins().isEmpty()){
-            config.setIncludePlugins(Arrays.asList(options.getIncludePlugins().toLowerCase().split(",")));
+            config.setIncludePlugins(List.of(options.getIncludePlugins().toLowerCase().split(",")));
         }
         if(options.getExcludePlugins() != null && !options.getExcludePlugins().isEmpty()){
-            config.setExcludePlugins(Arrays.asList(options.getExcludePlugins().toLowerCase().split(",")));
+            config.setExcludePlugins(List.of(options.getExcludePlugins().toLowerCase().split(",")));
         }
         if(options.getExcludeHooks() != null && !options.getExcludeHooks().isEmpty()){
-            config.setExcludeHooks(Arrays.asList(options.getExcludeHooks().split(",")));
+            config.setExcludeHooks(List.of(options.getExcludeHooks().split(",")));
         }
         if(options.getSkipTestCache() != null){
             config.setSkipTestCache(Boolean.parseBoolean(options.getSkipTestCache()));
@@ -135,7 +144,7 @@ public class PluginCompatTesterCli {
             config.setCacheThresholdStatus(TestStatus.valueOf(options.getCacheThresholdStatus()));
         }
         if(options.getHookPrefixes() != null && !options.getHookPrefixes().isEmpty()){
-            config.setHookPrefixes(Arrays.asList(options.getHookPrefixes().split(",")));
+            config.setHookPrefixes(List.of(options.getHookPrefixes().split(",")));
         }
         if(options.getExternalHooksJars() != null && !options.getExternalHooksJars().isEmpty()){
             config.setExternalHooksJars(options.getExternalHooksJars());
