@@ -1,9 +1,7 @@
 package org.jenkins.tools.test.hook;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.Map;
 
 /**
  * Workaround for those plugins with integration tests since they need execute the failsafe:integration-test goal before execution.
@@ -12,12 +10,12 @@ public class PluginWithFailsafeIntegrationTestsHook extends PluginWithIntegratio
 
     @Override
     public Collection<String> getGoals() {
-        return Arrays.asList("failsafe:integration-test");
+        return List.of("failsafe:integration-test");
     }
 
     @Override
     public Collection<String> getTestTypes() {
-        return Arrays.asList("failsafe");
+        return List.of("failsafe");
     }
     
 }
