@@ -25,18 +25,21 @@
  */
 package org.jenkins.tools.test.model;
 
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.StringReader;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
@@ -47,9 +50,9 @@ import javax.xml.xpath.XPathExpressionException;
 import javax.xml.xpath.XPathFactory;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.StringUtils;
-import org.apache.tools.ant.filters.StringInputStream;
 import org.jenkins.tools.test.exception.PluginSourcesUnavailableException;
 import org.w3c.dom.Document;
+import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
 
 /**
@@ -83,7 +86,7 @@ public class PluginRemoting {
         try {
 	    return retrievePomContentFromHpiRemoteUrl(new URL(hpiRemoteUrl));
 	} catch (MalformedURLException e) {
-	    LOGGER.log(Level.INFO, String.format("hpi reference %s is not a remote URL", hpiRemoteUrl));
+	    LOGGER.log(Level.WARNING, "HPI reference {0} is not a remote URL", hpiRemoteUrl);
 	    return retrievePomContentFromHpiFileReference();
 	}
     }
@@ -92,8 +95,8 @@ public class PluginRemoting {
     	try {
     	    return retrievePomContentFromInputStream(url.openStream());
 	} catch (IOException e) {
-	    System.err.println("Error : " + e.getMessage());
-          throw new PluginSourcesUnavailableException("Problem while retrieving pom content in hpi !", e);
+	    LOGGER.log(Level.WARNING, "Failed to retrieve POM content from HPI remote URL", e);
+          throw new PluginSourcesUnavailableException("Failed to retrieve POM content from HPI remote URL", e);
 	}
     }
 
@@ -102,8 +105,8 @@ public class PluginRemoting {
 	    String fileReference = hpiRemoteUrl.replaceAll("jar:", "").replaceAll("!/name.hpi", "");
     	    return retrievePomContentFromInputStream(FileUtils.openInputStream(new File(fileReference)));
 	} catch (IOException e) {
-	    System.err.println("Error : " + e.getMessage());
-          throw new PluginSourcesUnavailableException("Problem while retrieving pom content in hpi !", e);
+	    LOGGER.log(Level.WARNING, "Failed to retrieve POM content from HPI file reference", e);
+          throw new PluginSourcesUnavailableException("Failed to retrieve POM content from HPI file reference", e);
 	}
     }
 
@@ -123,17 +126,17 @@ public class PluginRemoting {
 
             return sb.toString();
         } catch (Exception e) {
-            System.err.println("Error : " + e.getMessage());
-            throw new PluginSourcesUnavailableException("Problem while retrieving pom content in hpi !", e);
+            LOGGER.log(Level.WARNING, "Failed to retrieve POM content from input stream", e);
+            throw new PluginSourcesUnavailableException("Failed to retrieve POM content from input stream", e);
         }
     }
 
     private String retrievePomContentFromXmlFile() throws PluginSourcesUnavailableException{
         try {
-            return FileUtils.readFileToString(pomFile);
+            return Files.readString(pomFile.toPath(), StandardCharsets.UTF_8);
         } catch(Exception e) {
-            System.err.println("Error : " + e.getMessage());
-            throw new PluginSourcesUnavailableException(String.format("Problem while retrieving pom content from file %s", pomFile), e);
+            LOGGER.log(Level.WARNING, String.format("Failed to retrieve POM content from XML file '%s'", pomFile), e);
+            throw new PluginSourcesUnavailableException(String.format("Failed to retrieve POM content from XML file '%s'", pomFile), e);
         }
     }
 	
@@ -149,7 +152,7 @@ public class PluginRemoting {
 		DocumentBuilderFactory docBuilderFactory = DocumentBuilderFactory.newInstance();
 		try {
 			DocumentBuilder builder = docBuilderFactory.newDocumentBuilder();
-			Document doc = builder.parse(new StringInputStream(pomContent));
+			Document doc = builder.parse(new InputSource(new StringReader(pomContent)));
 			
 			XPathFactory xpathFactory = XPathFactory.newInstance();
             XPath xpath = xpathFactory.newXPath();
@@ -166,25 +169,21 @@ public class PluginRemoting {
             packaging = StringUtils.trimToNull((String)packagingXPath.evaluate(doc, XPathConstants.STRING));
 
             String parentNode = xpath.evaluate("/project/parent", doc);
-            if (StringUtils.isNotBlank(parentNode)) {
-                LOGGER.log(Level.INFO, parentNode);
+            if (parentNode != null && !parentNode.isBlank()) {
+                LOGGER.log(Level.FINE, "Parent POM: {0}", parentNode);
                 parent = new MavenCoordinates(
                         getValueOrFail(doc, xpath, "/project/parent/groupId"),
                         getValueOrFail(doc, xpath, "/project/parent/artifactId"),
                         getValueOrFail(doc, xpath, "/project/parent/version"));
             } else {
-                LOGGER.log(Level.WARNING, "No parent POM reference for artifact {0}, " +
-                                "likely a plugin with Incrementals support is used (Jenkins JEP-305). " +
-                                "Will try to ignore it (FTR https://issues.jenkins-ci.org/browse/JENKINS-55169). " +
-                                "hpiRemoteUrl={1}, pomFile={2}",
-                        new Object[] {artifactId, hpiRemoteUrl, pomFile});
+                LOGGER.log(Level.FINE, "No parent POM for {0}", artifactId);
             }
 		} catch (ParserConfigurationException | SAXException | IOException e) {
-			System.err.println("Error : " + e.getMessage());
-			throw new PluginSourcesUnavailableException("Problem during pom.xml parsing", e);
+			LOGGER.log(Level.WARNING, "Failed to parse pom.xml", e);
+			throw new PluginSourcesUnavailableException("Failed to parse pom.xml", e);
 		} catch (XPathExpressionException e) {
-			System.err.println("Error : " + e.getMessage());
-			throw new PluginSourcesUnavailableException("Problem while retrieving plugin's scm connection", e);
+			LOGGER.log(Level.WARNING, "Failed to retrieve SCM connection", e);
+			throw new PluginSourcesUnavailableException("Failed to retrieve SCM connection", e);
 		}
 		
 		PomData pomData = new PomData(artifactId, packaging, scmConnection, scmTag, parent, groupId);
@@ -197,7 +196,7 @@ public class PluginRemoting {
      *
      * @throws IOException parsing error
      */
-	@Nonnull
+	@NonNull
 	private static String getValueOrFail(Document doc, XPath xpath, String field) throws IOException {
         String res;
 	    try {
@@ -206,7 +205,7 @@ public class PluginRemoting {
             throw new IOException("Expression failed for the field " + field, e);
         }
 
-        if (StringUtils.isBlank(res)) {
+        if (res == null || res.isBlank()) {
             throw new IOException("Field is either null or blank: " + field);
         }
         return res;
