@@ -7,7 +7,6 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -16,6 +15,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Queue;
 import java.util.Set;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import org.reflections.Reflections;
 import org.reflections.util.ConfigurationBuilder;
@@ -29,7 +30,9 @@ import org.reflections.util.ConfigurationBuilder;
  * never be called.
  */
 public class PluginCompatTesterHooks {
-    private Set<ClassLoader> classLoaders = new HashSet<>(Collections.singletonList(PluginCompatTesterHooks.class.getClassLoader()));
+    private static final Logger LOGGER = Logger.getLogger(PluginCompatTesterHooks.class.getName());
+
+    private Set<ClassLoader> classLoaders = new HashSet<>(List.of(PluginCompatTesterHooks.class.getClassLoader()));
     private List<String> hookPrefixes = new ArrayList<>();
     private static Map<String, Map<String, Queue<PluginCompatTesterHook>>> hooksByType = new HashMap<>();
     private List<String> excludeHooks = new ArrayList<>();
@@ -59,7 +62,7 @@ public class PluginCompatTesterHooks {
     }
 
     private void setupHooksByType() {
-        for(String stage : Arrays.asList("checkout", "execution", "compilation")) {
+        for (String stage : List.of("checkout", "execution", "compilation")) {
             hooksByType.put(stage, findHooks(stage));
         }
     }
@@ -103,19 +106,18 @@ public class PluginCompatTesterHooks {
         // Modifications build on each other, pertinent checks should be handled in the hook
         for(PluginCompatTesterHook hook : beforeHooks) {
             try {
-                System.out.println("Processing " + hook.getClass().getName());
                 if(!excludeHooks.contains(hook.getClass().getName()) && hook.check(elements)) {
+                    LOGGER.log(Level.INFO, "Running hook: {0}", hook.getClass().getName());
                     elements = hook.action(elements);
                     hook.validate(elements);
                 } else {
-                    System.out.println("Hook not triggered.  Continuing.");
+                    LOGGER.log(Level.FINE, "Skipping hook: {0}", hook.getClass().getName());
                 }
             } catch (RuntimeException re) {
                 //this type of exception should stop processing the plugins. Throw it up the chain
                 throw re;
             } catch (Exception ex) {
-                ex.printStackTrace();
-                System.out.println("Cannot make transformation; continue.");
+                LOGGER.log(Level.WARNING, "Failed to run hook; continuing", ex);
             }
         }
         return elements;
@@ -143,7 +145,7 @@ public class PluginCompatTesterHooks {
 
         // Search for all hooks defined within the given classpath prefix
         ConfigurationBuilder configurationBuilder = new ConfigurationBuilder();
-        ClassLoader[] loaders = classLoaders.toArray(new ClassLoader[classLoaders.size()]);
+        ClassLoader[] loaders = classLoaders.toArray(new ClassLoader[0]);
         configurationBuilder.addClassLoaders(loaders);
         for (String hookPrefix : hookPrefixes) {
             configurationBuilder.forPackage(hookPrefix, loaders);
@@ -179,7 +181,7 @@ public class PluginCompatTesterHooks {
             // Ignore abstract hooks
             if (!Modifier.isAbstract(c.getModifiers())) {
                 try {
-                    System.out.println("Hook: " + c.getName());
+                    LOGGER.log(Level.FINE, "Loading hook: {0}", c.getName());
                     Constructor<?> constructor = c.getConstructor();
                     PluginCompatTesterHook hook = (PluginCompatTesterHook) constructor.newInstance();
 
@@ -193,8 +195,7 @@ public class PluginCompatTesterHooks {
                         sortedHooks.put(plugin, allForType);
                     }
                 } catch (Exception ex) {
-                    System.out.println("Error when loading " + c.getName());
-                    ex.printStackTrace();
+                    LOGGER.log(Level.WARNING, "Error when loading " + c.getName() + "; continuing", ex);
                 }
             }
         }
